--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -1,132 +1,132 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Gallery</string>
+    <string name="app_name">Galerie</string>
     <string name="nav_albums">Albums</string>
-    <string name="searchbar_title"><![CDATA[Search photos & videos]]></string>
-    <string name="header_today">Today</string>
-    <string name="header_yesterday">Yesterday</string>
-    <string name="request_permissions">Request permissions</string>
-    <string name="filter">Filter</string>
-    <string name="filter_recent">Recent</string>
-    <string name="filter_nameAZ">Name (A-Z)</string>
-    <string name="filter_nameZA">Name (Z-A)</string>
-    <string name="filter_old">Old</string>
-    <string name="selected_s">Selected %s</string>
-    <string name="trash">Trash</string>
-    <string name="pause_video">Pause video</string>
-    <string name="play_video">Play video</string>
-    <string name="favorites">Favorites</string>
-    <string name="no_media_title">Seems empty here</string>
-    <string name="no_media_cd">No media found</string>
-    <string name="empty_trash_title">Squeaky Clean</string>
-    <string name="empty_trash_cd">Trash is empty</string>
-    <string name="error_title">Something went wrong :(</string>
-    <string name="error_cd">An error occurred</string>
-    <string name="copy_error">Copy error</string>
-    <string name="trash_restore">Restore</string>
-    <string name="trash_empty">Empty</string>
-    <string name="trash_delete">Delete</string>
-    <string name="share">Share</string>
-    <string name="remove_selected">Remove selected</string>
-    <string name="remove_all">Remove all</string>
-    <string name="empty_favorites_title">You have no favorites</string>
-    <string name="label">Label</string>
-    <string name="path">Path</string>
+    <string name="searchbar_title"><![CDATA[Rechercher des photos et vidéos]]></string>
+    <string name="header_today">Aujourd\'hui</string>
+    <string name="header_yesterday">Hier</string>
+    <string name="request_permissions">Demander les autorisations</string>
+    <string name="filter">Filtrer</string>
+    <string name="filter_recent">Récents</string>
+    <string name="filter_nameAZ">Nom (A-Z)</string>
+    <string name="filter_nameZA">Nom (Z-A)</string>
+    <string name="filter_old">Ancien</string>
+    <string name="selected_s">%s Sélectionné(s)</string>
+    <string name="trash">Corbeille</string>
+    <string name="pause_video">Mettre en pause</string>
+    <string name="play_video">Lire la vidéo</string>
+    <string name="favorites">Favoris</string>
+    <string name="no_media_title">C\'est très vide ici</string>
+    <string name="no_media_cd">Aucun média trouvé</string>
+    <string name="empty_trash_title">Vide</string>
+    <string name="empty_trash_cd">La corbeille est vide</string>
+    <string name="error_title">Quelque chose s\'est mal passé :(</string>
+    <string name="error_cd">Une erreur s\'est produite</string>
+    <string name="copy_error">Copier l\'erreur</string>
+    <string name="trash_restore">Restaurer</string>
+    <string name="trash_empty">Vider</string>
+    <string name="trash_delete">Supprimer</string>
+    <string name="share">Partager</string>
+    <string name="remove_selected">Retirer la sélection</string>
+    <string name="remove_all">Retirer tout</string>
+    <string name="empty_favorites_title">Vous n\'avez pas de favori</string>
+    <string name="label">Nom</string>
+    <string name="path">Emplacement</string>
     <string name="iso">" • ISO"</string>
-    <string name="kb">KB</string>
-    <string name="mb">MB</string>
-    <string name="gb">GB</string>
-    <string name="metadata">Metadata</string>
-    <string name="select_all">Select all</string>
-    <string name="unselect_all">Unselect all</string>
-    <string name="drop_down_cd">Drop down</string>
-    <string name="back_cd">Back</string>
-    <string name="settings_title">Settings</string>
-    <string name="settings_general">General</string>
-    <string name="settings_trash_title">Use trash can</string>
-    <string name="settings_trash_summary">Store deleted media for 30 days.\nDeleting media will result in a permanent loss if disabled.</string>
-    <string name="move_album_to_trash">Move album to trash</string>
-    <string name="pinned_albums_title">Pinned Albums</string>
-    <string name="unpin">Unpin</string>
-    <string name="pin">Pin</string>
-    <string name="nav_timeline">Timeline</string>
-    <string name="location_cd">Media Location</string>
-    <string name="location_map_cd">Location Map</string>
-    <string name="app_dev">by %s</string>
+    <string name="kb">ko</string>
+    <string name="mb">Mo</string>
+    <string name="gb">Go</string>
+    <string name="metadata">Métadonnées</string>
+    <string name="select_all">Tout sélectionner</string>
+    <string name="unselect_all">Tout désélectionner</string>
+    <string name="drop_down_cd">Dérouler</string>
+    <string name="back_cd">Retour</string>
+    <string name="settings_title">Paramètres</string>
+    <string name="settings_general">Général</string>
+    <string name="settings_trash_title">Utiliser la corbeille</string>
+    <string name="settings_trash_summary">Stocke les médias supprimés pendant 30 jours.\nLa suppression est permanente si la corbeille est désactivée.</string>
+    <string name="move_album_to_trash">Déplacer l\'album dans la corbeille</string>
+    <string name="pinned_albums_title">Albums épinglés</string>
+    <string name="unpin">Désépingler</string>
+    <string name="pin">Épingler</string>
+    <string name="nav_timeline">Chronologie</string>
+    <string name="location_cd">Emplacement des médias</string>
+    <string name="location_map_cd">Carte de localisation</string>
+    <string name="app_dev">par %s</string>
     <string name="app_dev_name">IacobIonut01</string>
-    <string name="donate">Donate</string>
+    <string name="donate">Faire un don</string>
     <string name="github">Github</string>
-    <string name="donate_button_cd">Donate Button</string>
-    <string name="github_button_cd">Github Button</string>
+    <string name="donate_button_cd">Bouton de donation</string>
+    <string name="github_button_cd">Bouton Github</string>
     <string name="donate_url">https://www.paypal.com/paypalme/iacobionut01</string>
     <string name="github_url">https://github.com/IacobIonut01/Gallery</string>
-    <string name="use_as">Use as</string>
-    <string name="set_as">"Set as: "</string>
-    <string name="action_cancel">Cancel</string>
-    <string name="action_confirm">Confirm</string>
-    <string name="action_confirmed">Confirmed</string>
-    <string name="history_recent_title">Recent</string>
+    <string name="use_as">Utiliser comme</string>
+    <string name="set_as">"Définir comme : "</string>
+    <string name="action_cancel">Annuler</string>
+    <string name="action_confirm">Confirmer</string>
+    <string name="action_confirmed">Confirmé</string>
+    <string name="history_recent_title">Récents</string>
     <string name="history_suggestions_title">Suggestions</string>
-    <string name="no_media_found">No media found</string>
-    <string name="image_add_description">Add a description</string>
-    <string name="edit_cd">edit</string>
-    <string name="settings_theme_header">Theme</string>
-    <string name="settings_follow_system_theme_title">Follow System Theme</string>
-    <string name="settings_dark_mode_title">Use Dark Mode</string>
-    <string name="selection_dialog_close_cd">Close selection dialog</string>
-    <string name="edit">Edit</string>
-    <string name="trash_deletion_warning">Photos and videos you delete will be removed after 30 days.</string>
-    <string name="open_with">Open with</string>
-    <string name="select">Select</string>
-    <string name="photos_and_videos">Photos and Videos</string>
+    <string name="no_media_found">Aucun média trouvé</string>
+    <string name="image_add_description">Ajouter une description</string>
+    <string name="edit_cd">éditer</string>
+    <string name="settings_theme_header">Thème</string>
+    <string name="settings_follow_system_theme_title">Suivre le thème du système</string>
+    <string name="settings_dark_mode_title">Utiliser le mode sombre</string>
+    <string name="selection_dialog_close_cd">Fermer le dialogue de sélection</string>
+    <string name="edit">Éditer</string>
+    <string name="trash_deletion_warning">Les photos et vidéos dans la corbeille seront supprimés au bout de 30 jours.</string>
+    <string name="open_with">Ouvrir avec</string>
+    <string name="select">Sélectionner</string>
+    <string name="photos_and_videos">Photos et vidéos</string>
     <string name="photos">Photos</string>
-    <string name="videos">Videos</string>
+    <string name="videos">Vidéos</string>
     <string name="photo">Photo</string>
-    <string name="video">Video</string>
-    <string name="close">Close</string>
-    <string name="manage_media_title">Allow Gallery to Manage your Media</string>
-    <string name="manage_media_summary">This setting just skips any extra confirmation dialogs while performing various actions like marking as favorite.</string>
-    <string name="skip">Skip</string>
-    <string name="allow">Allow</string>
-    <string name="all">All</string>
-    <string name="secure_mode_title">Secure Mode</string>
-    <string name="secure_mode_summary">Hide the app preview when you exit it</string>
-    <string name="rotate_screen_cd">Rotate Screen</string>
+    <string name="video">Vidéo</string>
+    <string name="close">Fermer</string>
+    <string name="manage_media_title">Permettre à Gallery de gérer vos médias</string>
+    <string name="manage_media_summary">Ce paramètre permet d\'ignorer toute boîte de dialogue de confirmation supplémentaire lors de l\'exécution de diverses actions telles que le marquage en tant que favori.</string>
+    <string name="skip">Ignorer</string>
+    <string name="allow">Autoriser</string>
+    <string name="all">Tous</string>
+    <string name="secure_mode_title">Mode privé</string>
+    <string name="secure_mode_summary">Cacher l\'aperçu de l\'application lorsque vous la quittez</string>
+    <string name="rotate_screen_cd">Pivoter l\'écran</string>
     <string name="size_dp">%1$sdp</string>
-    <string name="change_album_size">Change Album Card Size</string>
-    <string name="reset">Reset</string>
-    <string name="customization">Customization</string>
-    <string name="album_card_size_title">Album Card Size</string>
-    <string name="album_card_size_summary">Manually pick your album card size</string>
-    <string name="set_wallpaper">Wallpaper</string>
-    <string name="set_wallpaper_error">Can\'t set wallpaper, no app available!</string>
-    <string name="monthly_timeline_title">Monthly Timeline</string>
-    <string name="monthly_timeline_summary">Group the timeline monthly instead of per date (Restarts the app)</string>
-    <string name="amoled_mode_title">Use Amoled Mode</string>
-    <string name="amoled_mode_summary">Higher contrast, best suited for Amoled Screens</string>
-    <string name="location_chip">Location: %s</string>
-    <string name="media_details">Details</string>
-    <string name="album_card_size">Album Card Size</string>
-    <string name="edit_metadata">Edit Metadata</string>
-    <string name="dialog_to_trash">Moving to Trash</string>
-    <string name="dialog_delete">Deleting Permanently</string>
-    <string name="s_items">%1$s items</string>
-    <string name="trashing_items">Trashing %1$s items..</string>
-    <string name="deleting_items">Deleting %1$s items...</string>
-    <string name="long_press_to_remove">Long press to remove</string>
-    <string name="dialog_from_trash">Restoring from Trash</string>
-    <string name="restoring_items">Restoring %1$s items..</string>
-    <string name="trash_incompatible_title">Some items cannot be trashed!</string>
-    <string name="trash_incompatible_summary">Such items will be deleted permanently instead.</string>
-    <string name="error_toast">An error occurred!</string>
-    <string name="beta">Beta</string>
-    <string name="remove_metadata">Remove Metadata</string>
-    <string name="remove_location">Remove Location</string>
+    <string name="change_album_size">Taille des albums</string>
+    <string name="reset">Réinitialiser</string>
+    <string name="customization">Personnalisation</string>
+    <string name="album_card_size_title">Taille des albums</string>
+    <string name="album_card_size_summary">Choisissez la taille des albums</string>
+    <string name="set_wallpaper">Fond d\'écran</string>
+    <string name="set_wallpaper_error">Impossible de définir le fond d\'écran, aucune application disponible !</string>
+    <string name="monthly_timeline_title">Chronologie mensuelle</string>
+    <string name="monthly_timeline_summary">Grouper la chronologie par mois au lieu de la grouper par date (nécessite un redémarrage)</string>
+    <string name="amoled_mode_title">Utiliser le mode Amoled</string>
+    <string name="amoled_mode_summary">Contraste plus élevé, mieux adapté aux écrans Amoled</string>
+    <string name="location_chip">Emplacement : %s</string>
+    <string name="media_details">Détails</string>
+    <string name="album_card_size">Taille des albums</string>
+    <string name="edit_metadata">Modifier les métadonnées</string>
+    <string name="dialog_to_trash">Déplacement vers la corbeille</string>
+    <string name="dialog_delete">Suppression définitive</string>
+    <string name="s_items">%1$s éléments</string>
+    <string name="trashing_items">Suppression de %1$s éléments..</string>
+    <string name="deleting_items">Suppression définitive de %1$s éléments...</string>
+    <string name="long_press_to_remove">Appui long pour retirer</string>
+    <string name="dialog_from_trash">Restauration depuis la corbeille</string>
+    <string name="restoring_items">Restauration de %1$s éléments..</string>
+    <string name="trash_incompatible_title">Certains éléments ne peuvent pas être mis à la corbeille !</string>
+    <string name="trash_incompatible_summary">Ces éléments seront plutôt supprimés de façon permanente.</string>
+    <string name="error_toast">Une erreur s\'est produite !</string>
+    <string name="beta">Bêta</string>
+    <string name="remove_metadata">Supprimer les métadonnées</string>
+    <string name="remove_location">Supprimer l\'emplacement</string>
     <string name="description">Description</string>
-    <string name="move_to_another_album">Move to another album</string>
-    <string name="move">Move</string>
+    <string name="move_to_another_album">Déplacer dans un autre album</string>
+    <string name="move">Déplacer</string>
     <plurals name="item_count">
-        <item quantity="one">%s item</item>
-        <item quantity="other">%s items</item>
+        <item quantity="one">%s élément</item>
+        <item quantity="other">%s éléments</item>
     </plurals>
 </resources>
