--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -125,28 +125,28 @@
     <string name="description">Description</string>
     <string name="move_to_another_album">Déplacer dans un autre album</string>
     <string name="move">Déplacer</string>
-    <string name="some_permissions_are_not_granted">Some permissions are not granted!</string>
-    <string name="get_started">Get Started</string>
-    <string name="welcome">Welcome</string>
-    <string name="setup_summary">In order to access your media, it is required to grant the following permissions:</string>
-    <string name="required">Required</string>
-    <string name="optional">Optional</string>
-    <string name="permission_manage_media_title">• Manage Media</string>
-    <string name="permission_manage_media_summary">"    • Automatically grants system confirmation dialogs when you request several changes to your media (Toggle Favorite, Manage Trash, Edit metadata etc)"</string>
-    <string name="read_media_images">Read Media Images</string>
-    <string name="read_media_images_summary">Allows the app to show your images</string>
-    <string name="read_media_videos">Read Media Videos</string>
-    <string name="read_media_videos_summary">Allows the app to show your videos</string>
-    <string name="access_media_location">Access Media Location</string>
-    <string name="access_media_location_summary"><![CDATA[Allows the app to read location data of your images & videos]]></string>
+    <string name="some_permissions_are_not_granted">Certaines autorisations ne sont pas accordées !</string>
+    <string name="get_started">Démarrer</string>
+    <string name="welcome">Bienvenue</string>
+    <string name="setup_summary">Pour pouvoir accéder à vos médias, vous devez donner les autorisations suivantes :</string>
+    <string name="required">Requis</string>
+    <string name="optional">Optionnel</string>
+    <string name="permission_manage_media_title">Gérer les médias</string>
+    <string name="permission_manage_media_summary">"    • Accepter automatiquement les confirmations du système quand vous modifiez vos médias (mettre en favori, gérer la corbeille, modifier les métadonnées, etc.)"</string>
+    <string name="read_media_images">Lire les images</string>
+    <string name="read_media_images_summary">Permet à l\'application de monter vos images</string>
+    <string name="read_media_videos">Lire les vidéos</string>
+    <string name="read_media_videos_summary">Permet à l\'application de monter vos vidéos</string>
+    <string name="access_media_location">Lire la localisation des médias</string>
+    <string name="access_media_location_summary"><![CDATA[Permet à l'application de lire les données de localisation de vos images et vidéos]]></string>
     <string name="internet">Internet</string>
-    <string name="internet_summary"><![CDATA[Required to display Location Previews of your images & videos]]></string>
-    <string name="fancy_blur">Fancy Blur</string>
-    <string name="fancy_blur_summary">Blur background in Media View</string>
+    <string name="internet_summary"><![CDATA[Nécessaire pour afficher les aperçus de la localisation de vos images et vidéos]]></string>
+    <string name="fancy_blur">Flou artistique</string>
+    <string name="fancy_blur_summary">Flouter l\'arrière-plan lors de la vue des médias</string>
     <string name="old_navbar">Use Material Navigation</string>
     <string name="old_navbar_summary">Show the old navigation bar UI (with rails for bigger screens)</string>
-    <string name="hide_timeline_for_albums">Hide timeline for albums</string>
-    <string name="hide_timeline_for_album_summary">Hides date headers when opening an album</string>
+    <string name="hide_timeline_for_albums">Masquer la chronologie dans les albums</string>
+    <string name="hide_timeline_for_album_summary">Masque les en-têtes de date lors de l\'ouverture d\'un album</string>
     <plurals name="item_count">
         <item quantity="one">%s élément</item>
         <item quantity="other">%s éléments</item>
