--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -287,6 +287,18 @@
     <string name="date_header">Date Formats</string>
     <string name="date_header_summary">Set your own custom date formats</string>
     <string name="launch_on_library">Launch on Library</string>
+    <string name="categories">Categories</string>
+    <string name="classified_media">%1$s classified media</string>
+    <string name="scan_for_new_categories">Scan for new categories</string>
+    <string name="scanning_media">Scanning media...</string>
+    <string name="date_header_title">Date Header</string>
+    <string name="media_view">Media View</string>
+    <string name="exif_date">Exif Date</string>
+    <string name="media_info">Media Info</string>
+    <string name="weekly_date">Weekly Date</string>
+    <string name="media_grid">Media Grid</string>
+    <string name="classic_date">Classic Date</string>
+    <string name="extended_date">Extended Date</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
